Fixing spacing issues with stacked columns
Default behavior of unpadded columns produces a squashed appearance when viewing on smaller screens; resolving by adding top margins

--- a/section.less
+++ b/section.less
@@ -497,6 +497,20 @@
 			padding-left: (1rem / 4);
 		}
 	}
+	
+	@media all and (max-width: @v-rghtclmn-thrshld) {
+		.row:not(.pad-top) {
+			&.halves,
+			&.thirds,
+			&.quarters,
+			&.side-right,
+			&.side-left {
+				.one ~ .column {
+					margin-top: @v-dflt-spcng;
+				}
+			}
+		}
+	}
 
 //        ┌-----------------------------------------------------------------------------------------------------------┐
 //        │ ···· LINKED COLUMNS content group ······································································· │
